--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  box-sizing: border-box;
+  border: 1px solid red;
+}
+
 body {
   height: 100vh;
   margin: 0 auto;
